--- a/contact.scss
+++ b/contact.scss
@@ -151,11 +151,52 @@ nav {
   z-index: -1;
 }
 
+.marquee-container {
+  position: absolute;
+  top: 100px;
+  right: -200px;
+  transform: rotate(35deg);
+  height: 50px;
+  width: 700px;
+  background-color: rgba(45, 52, 54, 0.8);
+
+  #marquee-text {
+    letter-spacing: 3.5px;
+    text-transform: uppercase;
+    padding-left: 100%;
+    display: inline-block;
+    font-family: var(--typo-text);
+    font-weight: 100;
+    color: var(--light-color);
+    font-size: 35px;
+    white-space: nowrap;
+    animation: marquee 20s infinite linear;
+  }
+
+  .handshake {
+    color: var(--light-color);
+    font-size: 35px;
+  }
+}
+
+.marquee-container #marquee-text:hover {
+  animation-play-state: paused;
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
 .grid-container {
   margin-top: 0px;
   padding-bottom: 50px;
   display: grid;
-  grid-template-columns: 1.5fr 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
   grid-column-gap: 10px;
   grid-row-gap: 0px;
@@ -192,6 +233,41 @@ nav {
   flex-shrink: 1;
 }
 
+.contact-bubble {
+  width: 300px;
+  height: 330px;
+  background-color: rgba(223, 230, 233, 0.8);
+  border-radius: 5px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(168, 138, 138, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  margin-top: 25px;
+
+  h6 {
+    font-family: var(--cap-text);
+    text-transform: uppercase;
+    font-size: 25px;
+    text-align: center;
+  }
+
+  ul {
+    list-style: none;
+    text-align: center;
+    margin-top: -20px;
+    transform: translate(-8%, -8%);
+    li {
+      font-family: var(--cap-text);
+      font-size: 18px;
+
+      a {
+        text-decoration: none;
+        cursor: pointer;
+        color: black;
+      }
+    }
+  }
+}
+
 .pic-three {
   background-image: url(/images/cluster/reunionCluster.jpg);
   background-size: cover;
@@ -209,30 +285,3 @@ nav {
   border-radius: 10px;
   transition: 0.25s ease-in-out;
 }
-
-// .pic-one:hover {
-//   z-index: 20;
-//   width: 360px;
-//   height: 432px;
-//   opacity: 1;
-//   flex-grow: 4;
-// }
-// .pic-two:hover {
-//   z-index: 20;
-//   width: 360px;
-//   height: 429px;
-//   opacity: 1;
-//   flex-grow: 4;
-// }
-// .pic-three:hover {
-//   z-index: 20;
-//   width: 420px;
-//   height: 301px;
-//   opacity: 1;
-// }
-// .pic-four:hover {
-//   z-index: 20;
-//   width: 286px;
-//   height: 448px;
-//   opacity: 1;
-// }
