--- a/css/contact.css
+++ b/css/contact.css
@@ -153,11 +153,60 @@ nav ul a {
   z-index: -1;
 }
 
+.marquee-container {
+  position: absolute;
+  top: 100px;
+  right: -200px;
+  transform: rotate(35deg);
+  height: 50px;
+  width: 700px;
+  background-color: rgba(45, 52, 54, 0.8);
+}
+.marquee-container #marquee-text {
+  letter-spacing: 3.5px;
+  text-transform: uppercase;
+  padding-left: 100%;
+  display: inline-block;
+  font-family: var(--typo-text);
+  font-weight: 100;
+  color: var(--light-color);
+  font-size: 35px;
+  white-space: nowrap;
+  -webkit-animation: marquee 20s infinite linear;
+          animation: marquee 20s infinite linear;
+}
+.marquee-container .handshake {
+  color: var(--light-color);
+  font-size: 35px;
+}
+
+.marquee-container #marquee-text:hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+
+@-webkit-keyframes marquee {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
 .grid-container {
   margin-top: 0px;
   padding-bottom: 50px;
   display: grid;
-  grid-template-columns: 1.5fr 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
   grid-column-gap: 10px;
   grid-row-gap: 0px;
@@ -193,6 +242,36 @@ nav ul a {
   border-radius: 10px;
   transition: 0.25s ease-in-out;
   flex-shrink: 1;
+}
+
+.contact-bubble {
+  width: 300px;
+  height: 330px;
+  background-color: rgba(223, 230, 233, 0.8);
+  border-radius: 5px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(168, 138, 138, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  margin-top: 25px;
+}
+.contact-bubble h6 {
+  font-family: var(--cap-text);
+  text-transform: uppercase;
+  font-size: 25px;
+  text-align: center;
+}
+.contact-bubble ul {
+  list-style: none;
+  text-align: center;
+  margin-top: -20px;
+  transform: translate(-8%, -8%);
+}
+.contact-bubble ul li {
+  font-family: var(--cap-text);
+  font-size: 18px;
+}
+.contact-bubble ul li a {
+  text-decoration: none;
+  cursor: pointer;
+  color: black;
 }
 
 .pic-three {
