--- a/contact.scss
+++ b/contact.scss
@@ -15,7 +15,7 @@ body {
 
 body {
   background-color: #7f8c8d;
-  width: 1300px;
+  width: 100%;
   overflow-x: hidden;
   margin: 0;
 }
@@ -68,10 +68,10 @@ body {
 
 nav {
   position: absolute;
-  top: 0px;
-  left: 600px;
+  top: 260%;
+  left: 700px;
   width: 95%;
-  z-index: 100;
+  z-index: 10002;
 
   ul {
     position: relative;
@@ -99,22 +99,69 @@ nav {
   grid-area: 1 / 1 / 2 / 2;
   margin-top: 300px;
   margin-left: 10px;
-  width: 90%;
-  background-color: rgba(223, 230, 233, 0.8);
+  width: 100%;
   border-radius: 5px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
-    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   font-family: var(--typo-text);
+  color: var(--light-color);
   padding: 15px 15px;
   font-size: 17px;
+  position: relative;
 
-  .spnsorship {
-    font-weight: 200;
-    font-size: 25px;
+  .align-left {
+    text-align: left;
+  }
+  .align-right {
+    text-align: right;
+    margin-top: 10px;
   }
 
-  #ps {
+  .align-center {
+    margin-top: 50px;
+    text-align: center;
+
+    .italic {
+      font-style: italic;
+    }
+  }
+
+  .final {
+    margin-top: 50px;
+  }
+
+  .align-wild-right {
+    text-align: right;
+  }
+
+  .intro {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+  }
+
+  .big-bold {
+    font-family: var(--typo-text);
+    font-weight: 100;
+    font-size: 60px;
+    text-align: left;
+    line-height: 80px;
+
+    .credit-dots {
+      letter-spacing: 20px;
+      opacity: 0.8;
+    }
+  }
+  .lac-bleau-action {
+    position: absolute;
+    top: 120px;
+    left: 50px;
+    width: 320px;
+    height: 235px;
+    border-radius: 10px;
+    z-index: -1;
+    filter: grayscale(0.5);
+  }
+
+  .ps {
     font-weight: 100;
   }
 
@@ -125,6 +172,19 @@ nav {
     position: absolute;
     top: 280px;
     left: 500px;
+  }
+}
+
+.little-bold {
+  font-family: var(--typo-text);
+  font-weight: 400;
+  font-size: 20px;
+  text-align: left;
+  line-height: 80px;
+
+  .interro {
+    font-style: italic;
+    font-weight: 100;
   }
 }
 
@@ -141,6 +201,19 @@ nav {
   -webkit-text-stroke: 0.5px #2d3436;
 }
 
+.textbox::after {
+  content: "";
+  position: absolute;
+  z-index: 10001;
+  top: 100px;
+  left: 20px;
+  width: 100%;
+  height: 100%;
+  border-top-right-radius: 10px;
+  border-top: 2px dotted #ecf0f1;
+  border-right: 2px dotted #ecf0f1;
+}
+
 .headline-pic {
   width: 340px;
   height: 251px;
@@ -153,29 +226,32 @@ nav {
 
 .marquee-container {
   position: absolute;
-  top: 100px;
-  right: -200px;
+  left: 300px;
+  top: 200px;
   transform: rotate(35deg);
-  height: 50px;
-  width: 700px;
+  height: 140px;
+  width: 1200px;
   background-color: rgba(45, 52, 54, 0.8);
+  z-index: 1000;
+  overflow: hidden;
 
   #marquee-text {
     letter-spacing: 3.5px;
     text-transform: uppercase;
+    padding-top: 15px;
     padding-left: 100%;
     display: inline-block;
     font-family: var(--typo-text);
     font-weight: 100;
     color: var(--light-color);
-    font-size: 35px;
+    font-size: 75px;
     white-space: nowrap;
-    animation: marquee 20s infinite linear;
+    animation: marquee 40s infinite linear;
   }
 
   .handshake {
     color: var(--light-color);
-    font-size: 35px;
+    font-size: 75px;
   }
 }
 
@@ -196,7 +272,7 @@ nav {
   margin-top: 0px;
   padding-bottom: 50px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
   grid-template-rows: 1fr;
   grid-column-gap: 10px;
   grid-row-gap: 0px;
@@ -205,7 +281,7 @@ nav {
 
 .cluster-container {
   grid-area: 1 / 2 / 2 / 3;
-  margin-top: 10px;
+  margin-top: 0px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -213,15 +289,24 @@ nav {
   align-items: center;
 }
 
-.pic-one {
-  background-image: url(/images/cluster/bctRCluster.jpg);
-  background-size: cover;
+.certified-bagnere-img {
   width: 300px;
-  height: 330px;
+  height: 360px;
   border-radius: 10px;
+  filter: grayscale(1);
+  filter: contrast(90%);
   transition: 0.25s ease-in-out;
-  flex-shrink: 1;
 }
+
+.pyramid-race-finish {
+  width: 300px;
+  height: 398px;
+  border-radius: 10px;
+  margin-top: 20px;
+
+  filter: saturate(90%);
+}
+
 .pic-two {
   margin-top: 20px;
   background-image: url(/images/cluster/HL100finishCluster.jpeg);
@@ -237,10 +322,8 @@ nav {
   width: 300px;
   height: 330px;
   background-color: rgba(223, 230, 233, 0.8);
-  border-radius: 5px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(168, 138, 138, 0.3) 0px 30px 60px -30px,
-    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  border-radius: 10px;
+
   margin-top: 25px;
 
   h6 {
@@ -258,6 +341,7 @@ nav {
     li {
       font-family: var(--cap-text);
       font-size: 18px;
+      line-height: 30px;
 
       a {
         text-decoration: none;
@@ -266,22 +350,4 @@ nav {
       }
     }
   }
-}
-
-.pic-three {
-  background-image: url(/images/cluster/reunionCluster.jpg);
-  background-size: cover;
-  width: 220px;
-  height: 251px;
-  border-radius: 10px;
-  transition: 0.25s ease-in-out;
-}
-.pic-four {
-  background-image: url(/images/cluster/finsishfamilyCluster.jpg);
-  background-size: cover;
-  width: 220px;
-  height: 345px;
-  z-index: 2;
-  border-radius: 10px;
-  transition: 0.25s ease-in-out;
 }
