--- a/css/contact.css
+++ b/css/contact.css
@@ -15,7 +15,7 @@ body {
 
 body {
   background-color: #7f8c8d;
-  width: 1300px;
+  width: 100%;
   overflow-x: hidden;
   margin: 0;
 }
@@ -78,10 +78,10 @@ body {
 
 nav {
   position: absolute;
-  top: 0px;
-  left: 600px;
+  top: 260%;
+  left: 700px;
   width: 95%;
-  z-index: 100;
+  z-index: 10002;
 }
 nav ul {
   position: relative;
@@ -106,19 +106,61 @@ nav ul a {
   grid-area: 1/1/2/2;
   margin-top: 300px;
   margin-left: 10px;
-  width: 90%;
-  background-color: rgba(223, 230, 233, 0.8);
+  width: 100%;
   border-radius: 5px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   font-family: var(--typo-text);
+  color: var(--light-color);
   padding: 15px 15px;
   font-size: 17px;
+  position: relative;
 }
-.textbox .spnsorship {
-  font-weight: 200;
-  font-size: 25px;
+.textbox .align-left {
+  text-align: left;
 }
-.textbox #ps {
+.textbox .align-right {
+  text-align: right;
+  margin-top: 10px;
+}
+.textbox .align-center {
+  margin-top: 50px;
+  text-align: center;
+}
+.textbox .align-center .italic {
+  font-style: italic;
+}
+.textbox .final {
+  margin-top: 50px;
+}
+.textbox .align-wild-right {
+  text-align: right;
+}
+.textbox .intro {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+.textbox .big-bold {
+  font-family: var(--typo-text);
+  font-weight: 100;
+  font-size: 60px;
+  text-align: left;
+  line-height: 80px;
+}
+.textbox .big-bold .credit-dots {
+  letter-spacing: 20px;
+  opacity: 0.8;
+}
+.textbox .lac-bleau-action {
+  position: absolute;
+  top: 120px;
+  left: 50px;
+  width: 320px;
+  height: 235px;
+  border-radius: 10px;
+  z-index: -1;
+  filter: grayscale(0.5);
+}
+.textbox .ps {
   font-weight: 100;
 }
 .textbox .insta {
@@ -128,6 +170,18 @@ nav ul a {
   position: absolute;
   top: 280px;
   left: 500px;
+}
+
+.little-bold {
+  font-family: var(--typo-text);
+  font-weight: 400;
+  font-size: 20px;
+  text-align: left;
+  line-height: 80px;
+}
+.little-bold .interro {
+  font-style: italic;
+  font-weight: 100;
 }
 
 .headline {
@@ -143,6 +197,19 @@ nav ul a {
   -webkit-text-stroke: 0.5px #2d3436;
 }
 
+.textbox::after {
+  content: "";
+  position: absolute;
+  z-index: 10001;
+  top: 100px;
+  left: 20px;
+  width: 100%;
+  height: 100%;
+  border-top-right-radius: 10px;
+  border-top: 2px dotted #ecf0f1;
+  border-right: 2px dotted #ecf0f1;
+}
+
 .headline-pic {
   width: 340px;
   height: 251px;
@@ -155,29 +222,32 @@ nav ul a {
 
 .marquee-container {
   position: absolute;
-  top: 100px;
-  right: -200px;
+  left: 300px;
+  top: 200px;
   transform: rotate(35deg);
-  height: 50px;
-  width: 700px;
+  height: 140px;
+  width: 1200px;
   background-color: rgba(45, 52, 54, 0.8);
+  z-index: 1000;
+  overflow: hidden;
 }
 .marquee-container #marquee-text {
   letter-spacing: 3.5px;
   text-transform: uppercase;
+  padding-top: 15px;
   padding-left: 100%;
   display: inline-block;
   font-family: var(--typo-text);
   font-weight: 100;
   color: var(--light-color);
-  font-size: 35px;
+  font-size: 75px;
   white-space: nowrap;
-  -webkit-animation: marquee 20s infinite linear;
-          animation: marquee 20s infinite linear;
+  -webkit-animation: marquee 40s infinite linear;
+          animation: marquee 40s infinite linear;
 }
 .marquee-container .handshake {
   color: var(--light-color);
-  font-size: 35px;
+  font-size: 75px;
 }
 
 .marquee-container #marquee-text:hover {
@@ -206,7 +276,7 @@ nav ul a {
   margin-top: 0px;
   padding-bottom: 50px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
   grid-template-rows: 1fr;
   grid-column-gap: 10px;
   grid-row-gap: 0px;
@@ -215,7 +285,7 @@ nav ul a {
 
 .cluster-container {
   grid-area: 1/2/2/3;
-  margin-top: 10px;
+  margin-top: 0px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -223,14 +293,21 @@ nav ul a {
   align-items: center;
 }
 
-.pic-one {
-  background-image: url(/images/cluster/bctRCluster.jpg);
-  background-size: cover;
+.certified-bagnere-img {
   width: 300px;
-  height: 330px;
+  height: 360px;
   border-radius: 10px;
+  filter: grayscale(1);
+  filter: contrast(90%);
   transition: 0.25s ease-in-out;
-  flex-shrink: 1;
+}
+
+.pyramid-race-finish {
+  width: 300px;
+  height: 398px;
+  border-radius: 10px;
+  margin-top: 20px;
+  filter: saturate(90%);
 }
 
 .pic-two {
@@ -248,8 +325,7 @@ nav ul a {
   width: 300px;
   height: 330px;
   background-color: rgba(223, 230, 233, 0.8);
-  border-radius: 5px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(168, 138, 138, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  border-radius: 10px;
   margin-top: 25px;
 }
 .contact-bubble h6 {
@@ -267,28 +343,10 @@ nav ul a {
 .contact-bubble ul li {
   font-family: var(--cap-text);
   font-size: 18px;
+  line-height: 30px;
 }
 .contact-bubble ul li a {
   text-decoration: none;
   cursor: pointer;
   color: black;
-}
-
-.pic-three {
-  background-image: url(/images/cluster/reunionCluster.jpg);
-  background-size: cover;
-  width: 220px;
-  height: 251px;
-  border-radius: 10px;
-  transition: 0.25s ease-in-out;
-}
-
-.pic-four {
-  background-image: url(/images/cluster/finsishfamilyCluster.jpg);
-  background-size: cover;
-  width: 220px;
-  height: 345px;
-  z-index: 2;
-  border-radius: 10px;
-  transition: 0.25s ease-in-out;
 }/*# sourceMappingURL=contact.css.map */
