--- a/css/contactMQ.css
+++ b/css/contactMQ.css
@@ -1,3 +1,8 @@
+@media (min-width: 481px) {
+  .mobile-container {
+    display: none;
+  }
+}
 @media (max-width: 480px) {
   .pre-load-wrapper {
     position: fixed;
@@ -12,7 +17,111 @@
   }
 
   nav {
-    top: 0px;
+    top: 290%;
+    left: 130px;
+  }
+
+  .headline {
+    top: 10px;
+    left: 140px;
+    font-size: 90px;
+    -webkit-text-stroke: 1px #2d3436;
+  }
+
+  .headline-pic {
+    width: 340px;
+    height: 251px;
+    border-radius: 10px;
+    position: absolute;
+    top: 10px;
+    left: 65px;
+    z-index: -1;
+  }
+
+  .marquee-container {
     left: 0px;
+    top: 750px;
+    transform: rotate(0deg);
+    height: 55px;
+    width: 500px;
+  }
+
+  .marquee-container #marquee-text {
+    padding-top: 0px;
+    font-size: 35px;
+    animation: marquee 30s infinite linear;
+  }
+
+  .marquee-container .handshake {
+    font-size: 35px;
+  }
+
+  .grid-container {
+    display: none;
+  }
+  .mobile-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin-top: 270px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .mobile-container .title {
+    text-align: center;
+  }
+  .mobile-container .occupation {
+    margin-top: 10px;
+    text-align: center;
+  }
+  .mobile-container .based-in {
+    margin-top: 20px;
+    text-align: center;
+  }
+
+  .mobile-container .large-font {
+    font-family: "Roboto Slab", serif;
+    font-size: 50px;
+    font-weight: 200;
+    color: rgba(223, 230, 233, 1);
+  }
+  .mobile-container .small-font {
+    font-family: "Roboto Slab", serif;
+    font-size: 30px;
+    font-weight: 200;
+    color: rgba(223, 230, 233, 1);
+  }
+
+  .large-font .italic-text {
+    font-style: italic;
+  }
+  .small-font .italic-text {
+    font-style: italic;
+  }
+
+  .mobile-contact {
+    margin-top: -20px;
+    text-align: center;
+  }
+
+  .mobile-contact ul {
+    list-style: none;
+    margin-top: -60px;
+    transform: translateX(-20px);
+  }
+  .mobile-contact li {
+    font-family: "Roboto Slab", serif;
+    font-size: 20px;
+    font-weight: 100;
+    color: rgba(223, 230, 233, 1);
+  }
+
+  .mobile-contact a {
+    color: rgba(223, 230, 233, 1);
+    text-decoration: none;
+  }
+  .certified-bagnere-img {
+    margin-top: 20px;
   }
 }
