--- a/style.css
+++ b/style.css
@@ -90,6 +90,22 @@
   font-size: 35px;
 }
 
+.latest-results-box {
+  position: absolute;
+  left: 20px;
+  top: 250px;
+  height: 200px;
+  width: 250px;
+  background-color: #ecf0f1;
+  border-radius: 15px;
+}
+.latest-results-box h5 {
+  text-align: center;
+  font-family: "Roboto Slab", serif;
+  font-weight: 100;
+  font-size: 20px;
+}
+
 .hero-nav {
   position: absolute;
   width: 80%;
