--- a/RacingMF.scss
+++ b/RacingMF.scss
@@ -20,7 +20,6 @@ body {
   margin: 0;
   font-family: var(--p-font);
   font-size: 1.3rem;
-  // line-height: 1.6;
   color: var(--color-black);
   background-color: var(--color-grey);
 }
@@ -97,7 +96,7 @@ li {
 
 .nav__list {
   text-align: center;
-  margin-top: 0;
+  margin-top: 1em;
   margin-left: 0;
   padding-left: 0;
 }
@@ -120,7 +119,13 @@ li {
 
 .svg-bundle {
   position: relative;
-  max-width: 500px;
+  max-width: 400px;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+}
+
+.typography-container {
+  margin: 2em 0;
 }
 
 .bigorre-tiger {
@@ -275,9 +280,9 @@ li {
   }
 
   .header-title {
-    margin-top: 2em;
     font-size: 6rem;
     margin-left: 0.5em;
+    margin-top: 1.5em;
   }
 
   .race-one {
