--- a/css/RacingMF.css
+++ b/css/RacingMF.css
@@ -94,7 +94,7 @@ li {
 
 .nav__list {
   text-align: center;
-  margin-top: 0;
+  margin-top: 1em;
   margin-left: 0;
   padding-left: 0;
 }
@@ -117,7 +117,13 @@ li {
 
 .svg-bundle {
   position: relative;
-  max-width: 500px;
+  max-width: 400px;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+}
+
+.typography-container {
+  margin: 2em 0;
 }
 
 .bigorre-tiger {
@@ -274,9 +280,9 @@ li {
   }
 
   .header-title {
-    margin-top: 2em;
     font-size: 6rem;
     margin-left: 0.5em;
+    margin-top: 1.5em;
   }
 
   .race-one {
