--- a/css/philosophyMF.css
+++ b/css/philosophyMF.css
@@ -102,10 +102,11 @@ ul {
   font-style: normal;
   text-transform: uppercase;
   transition: 0.2s ease-in-out;
+  font-size: 1.6rem;
 }
 
 .nav__link:hover {
-  text-shadow: var(--color-red) 6px 6px 3px;
+  text-shadow: var(--color-red) 3px 3px 3px;
 }
 
 .header-title {
