--- a/css/results.css
+++ b/css/results.css
@@ -50,6 +50,7 @@ h3 {
   width: 95%;
   margin: 0 auto;
 }
+
 .df {
   display: flex;
   justify-content: center;
@@ -58,8 +59,6 @@ h3 {
 ul {
   list-style: none;
 }
-
-//nav css
 
 .nav-toggle {
   font-size: 3rem;
@@ -110,96 +109,62 @@ ul {
   text-shadow: var(--color-red) 3px 3px 3px;
 }
 
-//specific top to bottom
-//header
-
-.header-title {
-  font-size: 5.5rem;
-  margin-top: 0.65em;
-  margin-left: 0.2em;
-  letter-spacing: 2px;
-}
-.header-container {
+.title-section {
+  margin-top: 2.5em;
   position: relative;
 }
 
-//img css
+.title-text {
+  margin-top: 1em;
+  font-size: 5rem;
+}
 
-.small-img {
+.pyramid-img {
   width: 50%;
-}
-
-.large-img {
-  width: 80%;
-}
-
-.skull-img {
   position: absolute;
+  top: -40%;
+  right: 0;
   z-index: -1;
-  top: 45%;
-  left: 48%;
 }
 
-.tashi-img {
-  position: absolute;
-  z-index: -1;
-  top: 45%;
-  left: 0;
-}
-
-.aba-img {
-  border-radius: 10px;
-}
-
-//section
-
-.section-one {
+.results__list {
   position: relative;
 }
 
-.section-two {
-  padding-bottom: 2em;
-  display: flex;
-  justify-content: center;
+.results__list::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 7%;
+  border-left: 1px dashed var(--color-white);
 }
 
-.section-one-content {
+.results-list__year {
+  font-family: var(--roboto-font);
+  text-align: center;
+}
+
+.results-list__item {
+  font-family: var(--p-font);
   font-weight: 100;
-  font-size: 2rem;
-  text-align: right;
-  margin-right: 0.25em;
-  padding-right: 0.5em;
-  padding-top: 0.5em;
-  border-right: 1px dashed var(--color-white);
+  text-align: center;
 }
 
-@media (max-width: 550px) {
-  .page-wrapper {
-    display: block;
-  }
+.race-title {
+  font-weight: 200;
+  font-style: italic;
+}
+
+.list__title {
+  margin-left: 1em;
+  font-family: var(--p-font);
+  font-weight: 100;
+  text-transform: uppercase;
 }
 
 @media (min-width: 800px) {
-  body {
-    position: relative;
-  }
-  .page-wrapper {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .col-left {
-    width: 40%;
-    margin-top: 0;
-    position: relative;
-  }
-  .col-right {
-    width: 35%;
-    margin-top: 3em;
-  }
-  .header-container {
-    position: unset;
-  }
   .nav-toggle {
     visibility: hidden;
   }
@@ -210,50 +175,52 @@ ul {
 
   .nav__list {
     display: flex;
-    justify-content: flex-end;
-    margin-right: 6em;
   }
 
   .nav__item {
     margin-left: 2em;
   }
-  .nav__link {
+
+  .title-section {
+    margin-top: 2.5em;
+    position: relative;
+  }
+
+  .title-text {
+    margin-top: 1em;
+    font-size: 8rem;
+    padding-left: 0.8em;
+  }
+
+  .pyramid-img {
+    width: 30%;
+    top: -65%;
+    left: 50%;
+  }
+
+  .section-body {
+    margin-top: 10rem;
+    width: 60%;
+  }
+
+  .results-list__year {
+    font-size: 3rem;
+  }
+
+  .results-list__item {
     font-size: 1.6rem;
   }
 
-  .nav__link:hover {
-    text-shadow: var(--color-red) 3px 3px 3px;
-  }
-  .header-title {
-    font-size: 8rem;
-    margin-top: 1.3em;
+  .race-title {
+    font-weight: 200;
+    font-style: italic;
+    font-size: 2rem;
   }
 
-  .section-one-content {
-    font-size: 2.5rem;
-    margin-right: 0;
-    padding-right: 0.5em;
-    padding-top: 0;
+  .list__title {
+    font-size: 3rem;
+    margin-left: 1em;
+    font-family: var(--p-font);
+    font-weight: 100;
   }
-
-  .skull-img {
-    width: 70%;
-    top: -10%;
-    left: 60%;
-  }
-  .section-two {
-    padding-bottom: 0;
-    display: block;
-    position: absolute;
-    top: 55%;
-    left: 10%;
-  }
-
-  .aba-img {
-    width: 30%;
-    border-radius: 0px;
-  }
-  .tashi-img {
-    display: none;
-  }
-}
+}/*# sourceMappingURL=results.css.map */
