--- a/css/home.css
+++ b/css/home.css
@@ -48,7 +48,7 @@ body {
   z-index: 1000;
   width: 100%;
   height: 100%;
-  background: linear-gradient(132deg, rgb(127, 140, 141) 32%, rgb(214, 48, 49) 100%);
+  background-color: var(--color-grey);
   display: flex;
   justify-content: center;
   align-items: center;
