--- a/home.scss
+++ b/home.scss
@@ -47,11 +47,7 @@ body {
   z-index: 1000;
   width: 100%;
   height: 100%;
-  background: linear-gradient(
-    132deg,
-    rgba(127, 140, 141, 1) 32%,
-    rgba(214, 48, 49, 1) 100%
-  );
+  background-color: var(--color-grey);
   display: flex;
   justify-content: center;
   align-items: center;
