--- a/css/home.css
+++ b/css/home.css
@@ -142,29 +142,61 @@ h1 {
   opacity: 0.9;
 }
 
+.icon-container {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+}
+
 .icon-link {
   color: var(--color-white);
   text-decoration: none;
 }
 
-.instagram-icon {
+.tooltip {
+  position: relative;
+}
+
+.tooltip-text {
   position: absolute;
   top: 10px;
-  right: 15px;
+  left: -145px;
+  background-color: var(--color-black);
+  color: #ecf0f1;
+  font-size: 0.8rem;
+  font-family: var(--section-title-font);
+  padding: 0.5em 0.5em;
+  visibility: hidden;
+  transition: 0.2s ease;
+  border-radius: 10px;
+}
+
+.tooltip:hover .tooltip-text {
+  visibility: visible;
+}
+
+.instagram-icon {
+  margin-bottom: 0.3em;
   font-size: 2rem;
   color: var(--color-white);
   text-shadow: #2f3640 2px 2px 5px;
 }
 
 .spotify-icon {
-  position: absolute;
-  top: 50px;
-  right: 14px;
   font-size: 1.8rem;
   color: var(--color-white);
   text-shadow: #2f3640 2px 2px 5px;
 }
 
+@media (max-width: 500px) {
+  .tooltip-text {
+    display: none;
+  }
+}
 @media (min-width: 800px) {
   .hero-img-container {
     background-image: url(/images/redshorts1.jpg);
