--- a/coaching.scss
+++ b/coaching.scss
@@ -144,13 +144,14 @@ ul {
   position: absolute;
   top: 68%;
   left: 15%;
-  background-color: rgba(223, 230, 233, 0.6);
+  background-color: rgba(223, 230, 233, 0.7);
   color: black;
   font-family: "Raleway", sans-serif;
-  font-weight: 400;
-  font-style: italic;
+
+  font-weight: 500;
+  letter-spacing: 1.5px;
   border-radius: 10px;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   text-align: center;
   padding: 5px 5px;
 }
