--- a/css/results.css
+++ b/css/results.css
@@ -149,6 +149,8 @@ ul {
   font-size: 1.2em;
   font-family: var(--roboto-font);
   text-align: center;
+  margin-bottom: 0.5rem;
+  font-weight: 100;
 }
 
 .results-list__item {
