--- a/results.scss
+++ b/results.scss
@@ -151,6 +151,8 @@ ul {
   font-size: 1.2em;
   font-family: var(--roboto-font);
   text-align: center;
+  margin-bottom: 0.5rem;
+  font-weight: 100;
 }
 
 .results-list__item {
