--- a/about.scss
+++ b/about.scss
@@ -51,7 +51,6 @@ h3 {
   width: 95%;
   margin: 0 auto;
 }
-
 .df {
   display: flex;
   justify-content: center;
@@ -60,6 +59,8 @@ h3 {
 ul {
   list-style: none;
 }
+
+//nav css
 
 .nav-toggle {
   font-size: 3rem;
@@ -112,4 +113,4 @@ ul {
 
 .funk {
   font-size: 1000px;
-}/*# sourceMappingURL=about.css.map */
+}
