--- a/css/about.css
+++ b/css/about.css
@@ -2,6 +2,8 @@
 *::after,
 *::before {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 :root {
@@ -20,6 +22,7 @@
 
 body {
   margin: 0;
+  padding: 0;
   font-family: var(--roboto-font);
   font-size: 1.3rem;
   color: var(--color-white);
@@ -61,11 +64,15 @@ ul {
   list-style: none;
 }
 
+.nav-section {
+  margin-top: -6%;
+}
+
 .nav-toggle {
   font-size: 3rem;
   color: var(--color-white);
   margin-left: 0.25em;
-  margin-top: 0;
+  margin-top: 0.5rem;
   position: absolute;
   z-index: 100;
   cursor: pointer;
@@ -110,6 +117,94 @@ ul {
   text-shadow: #95a5a6 3px 3px 3px;
 }
 
-.funk {
-  font-size: 1000px;
+.hero-img {
+  width: 100%;
+  z-index: -1;
+}
+
+.title-section {
+  position: relative;
+  background-image: url(/images/SingleTrackWeb.jpeg);
+  background-size: cover;
+  width: 100%;
+  height: 40vh;
+}
+
+.title-body {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.title-text-top {
+  position: absolute;
+  font-family: var(--raleway-font);
+  font-weight: 700;
+  text-shadow: #2f3640 2px 2px 5px;
+  margin-top: 0em;
+  font-size: 2rem;
+  letter-spacing: 1.5px;
+  line-height: 110%;
+  top: 85%;
+  padding-left: 1rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  padding-right: 0.5rem;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 10px;
+}
+
+.title-text {
+  font-family: var(--raleway-font);
+  font-weight: 700;
+  text-shadow: #2f3640 2px 2px 5px;
+  margin-top: 0em;
+  font-size: 2rem;
+  text-align: center;
+  letter-spacing: 2px;
+  line-height: 110%;
+}
+
+.elongate {
+  letter-spacing: 5px;
+  font-weight: 800;
+}
+
+.body-text {
+  font-family: var(--roboto-font);
+  font-size: 1.3rem;
+  font-weight: 300;
+}
+
+.has-dropcap::first-letter {
+  color: var(--color-red);
+  font-size: 4em;
+  float: left;
+  line-height: 0.75;
+  margin: 0.1em 0.2em 0 0.1em;
+}
+
+.article-subhead {
+  font-family: var(--raleway-font);
+  font-weight: 700;
+  font-size: 1.3rem;
+  text-align: center;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  margin-top: 0.5rem;
+}
+
+.article-list__item {
+  margin-bottom: 0.8em;
+}
+
+.article-list_item-title {
+  font-style: italic;
+  font-size: 1em;
+  font-weight: 100;
+}
+
+.quick-list {
+  list-style: disc;
+  margin-top: 5%;
+  text-align: center;
 }/*# sourceMappingURL=about.css.map */
