--- a/home2023.scss
+++ b/home2023.scss
@@ -104,7 +104,7 @@ h1 {
 }
 
 .hero-img-container {
-  background-image: url(/images/blog-photos/ben--mafateColorFullBig.jpg);
+  background-image: url(/images/webHero2024Mobile.jpg);
 
   background-size: contain;
   width: 100%;
@@ -229,7 +229,7 @@ h1 {
 
 @media (min-width: 800px) {
   .hero-img-container {
-    background-image: url(/images/ben--mafateGrandeFullColor.jpg);
+    background-image: url(/images/webHero2024.jpg);
     background-size: contain;
     width: 45%;
     height: 100vh;
